Fix double scrollbar on body

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -15,7 +15,7 @@ html {
 
 body {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   min-height: 100vh;
   margin: 0;
